<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/index"
            android:title="@string/index"
            android:checked="true"
            android:icon="@drawable/ic_home"/>
        <!--<item-->
            <!--android:id="@+id/PersonInfo"-->
            <!--android:title="我的信息"-->
            <!--android:icon="@drawable/ic_myinfo" />-->

        <item
            android:id="@+id/reservation"
            android:title="@string/reservation"
            android:icon="@drawable/ic_reservation"/>
        <item
            android:id="@+id/navi"
            android:title="@string/navi"
            android:icon="@drawable/navi" />
        <item
            android:id="@+id/setting"
            android:title="@string/setting"
            android:icon="@drawable/setting"/>

        <!--<item xmlns:app="http://schemas.android.com/apk/res-auto"-->
            <!--android:id="@+id/notifaction"-->
            <!--android:title="@string/notification"-->
            <!--android:icon="@drawable/notifacation"-->
            <!--app:actionLayout="@layout/notify_point"-->
            <!--app:showAsAction="always" />-->


        <!--<item-->
            <!--android:id="@+id/wuliaotu"-->
            <!--android:title="@string/first_menu"/>-->

    </group>
</menu>